2006-04-06  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-sensor-cmds-udm.c
	(ipmi_cmd_get_sensor_thresholds): Fix function call cut and paste
	type.
	
2006-04-05  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-sol-cmds.h: Add SOL sequence
	number max definition.
	
2006-04-04  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-udm.c (ipmi_open_inband): Fix
	no-probing bug.
	
2006-04-03  Anand Babu  <ab@zresearch.com>
	* libfreeipmi/src/ipmi-locate-smbios.c: check if record length >=
	16. It was > 16 before. Found while running on IBM e325.
	
2006-04-04  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower.h, ipmipower/src/ipmipower_powercmd.c:
	Remove all use of "error_occurred" flag.  The flag is no longer
	necessary.

	* ipmipower/src/ipmipower_powercmd.c (_recv_packet): Fix check
	ordering bug.
	
2006-04-03  Anand Babu  <ab@zresearch.com>

	* doc/freeipmi-faq.texi: Updated x86-64 platform related
	questions.
	* doc/freeipmi.texi: Updated.
	* fish/bmc-config.8.pre.in: Updated.
	* freeipmi/fish/extensions/bc-common.scm: verbose flag. Closing
	bug #16113.
	* fish/extensions/bmc-config.scm: like wise.
	* fish/extensions/bc-section.scm: "Not supported" message
	printed only when verbose.

2006-04-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-utils.h,
	libfreeipmi/src/ipmi-utils.c (ipmi_is_ipmi_1_5_packet,
	ipmi_is_ipmi_2_0_packet): New functions.

	* libfreeipmi/include/freeipmi/ipmi-rmcpplus-utils.h,
	libfreeipmi/src/ipmi-rmcpplus-utils.c
	(ipmi_rmcpplus_calculate_payload_type): New function.
	
2006-03-31  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: New ipmi_kcs_cmd() for kcs api.  Adjust UDM
	functions appropriately.

	* bmc-watchdog/: Implement with KCS api.

	* libfreeipmi/src/ipmi-semaphores.c (ipmi_mutex_init): Fix errno
	setting corner case.
	
2006-03-30  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_powercmd.c (_send_packet): Remove